Modified default elemental type death messages